--- a/audio/audio_effects.conf
+++ b/audio/audio_effects.conf
@@ -7,10 +7,10 @@
 #    }
 libraries {
   bundle {
-    path /system/lib/soundfx/libbundlewrapper.so
+    path /vendor/lib/soundfx/libbundlewrapper.so
   }
   reverb {
-    path /system/lib/soundfx/libreverbwrapper.so
+    path /vendor/lib/soundfx/libreverbwrapper.so
   }
   qcbassboost {
     path /vendor/lib/soundfx/libqcbassboost.so
@@ -22,35 +22,28 @@ libraries {
     path /vendor/lib/soundfx/libqcreverb.so
   }
   visualizer_sw {
-    path /system/lib/soundfx/libvisualizer.so
+    path /vendor/lib/soundfx/libvisualizer.so
   }
   visualizer_hw {
-    path /system/lib/soundfx/libqcomvisualizer.so
+    path /vendor/lib/soundfx/libqcomvisualizer.so
   }
   downmix {
-    path /system/lib/soundfx/libdownmix.so
+    path /vendor/lib/soundfx/libdownmix.so
   }
-#add dirac effect bug 156518
   loudness_enhancer {
-    path /system/lib/soundfx/libldnhncr.so
+    path /vendor/lib/soundfx/libldnhncr.so
   }
   proxy {
-    path /system/lib/soundfx/libeffectproxy.so
+    path /vendor/lib/soundfx/libeffectproxy.so
   }
   offload_bundle {
-    path /system/lib/soundfx/libqcompostprocbundle.so
+    path /vendor/lib/soundfx/libqcompostprocbundle.so
   }
   audio_pre_processing {
-    path /system/lib/soundfx/libqcomvoiceprocessing.so
+    path /vendor/lib/soundfx/libqcomvoiceprocessing.so
   }
-  loudness_enhancer {
-    path /system/lib/soundfx/libldnhncr.so
-  }
-#  volume_listener {
-#    path /system/lib/soundfx/libvolumelistener.so
-#  }
- dirac {
-    path /system/lib/soundfx/libdirac.so
+  dirac {
+	path /vendor/lib/soundfx/libdirac.so
   }
 }
 
@@ -58,7 +51,7 @@ libraries {
 # audio HAL implements support for default software audio pre-processing effects
 #
 #  pre_processing {
-#    path /system/lib/soundfx/libaudiopreprocessing.so
+#    path /vendor/lib/soundfx/libaudiopreprocessing.so
 #  }
 
 # list of effects to load. Each effect element must contain a "library" and a "uuid" element.
@@ -235,119 +228,16 @@ effects {
     library audio_pre_processing
     uuid 1d97bb0b-9e2f-4403-9ae3-58c2554306f8
   }
-#bug 156518 add dirac effect
-#  music_helper {
-#    library volume_listener
-#    uuid 08b8b058-0590-11e5-ac71-0025b32654a0
-#  }
-#  ring_helper {
-#    library volume_listener
-#    uuid 0956df94-0590-11e5-bdbe-0025b32654a0
-#  }
-#  alarm_helper {
-#    library volume_listener
-#    uuid 09f303e2-0590-11e5-8fdb-0025b32654a0
-#  }
-  # voice_helper is called when stream type is voice_call in VoIP usecase
-#  voice_helper {
-#    library volume_listener
-#    uuid 0ace5c08-0590-11e5-ae9e-0025b32654a0
-#  }
-#  notification_helper {
-#    library volume_listener
-#    uuid 0b776dde-0590-11e5-81ba-0025b32654a0
-#  }
-   dirac {
-    library dirac
-    uuid e069d9e0-8329-11df-9168-0002a5d5c51b
-  }
+  	dirac_controller {
+		library dirac
+			uuid b437f4de-da28-449b-9673-667f8b9643fe
+	}
+	dirac_music {
+		library dirac
+			uuid b437f4de-da28-449b-9673-667f8b964304
+	}
 }
 
-# additional effect from vendor
-# UUID generated using version 1
-
-#output_session_processing {
-#    music {
-#        music_helper {
-#        }
-#    }
-#    ring {
-#        ring_helper {
-#        }
-#    }
-#    alarm {
-#        alarm_helper {
-#        }
-#    }
-    # stream type voice_call is used for VoIP call
-#    voice_call {
-#        voice_helper {
-#        }
-#    }
-#    notification {
-#        notification_helper {
-#        }
-#    }
-#}
-
-# Audio global processor configurations.
-# The global processor configuration consists in a list of effects elements.
-# The name of the effect element must be the name of one of the effects in
-# the "effects" list of the file.
-# Each effect element may optionally contain a list of parameters and their
-# default value to apply when the pre processor effect is created.
-# A parameter is defined by a "param" element and a "value" element. Each of these elements
-# consists in one or more elements specifying a type followed by a value.
-# The types defined are: "int", "short", "float", "bool" and "string"
-# When both "param" and "value" are a single int, a simple form is allowed where just
-# the param and value pair is present in the parameter description
-#    global_processing {
-#        <fx name> {
-#            <param 1 name> {
-#                param {
-#                    int|short|float|bool|string <value>
-#                    [ int|short|float|bool|string <value> ]
-#                    ...
-#                }
-#                value {
-#                    int|short|float|bool|string <value>
-#                    [ int|short|float|bool|string <value> ]
-#                    ...
-#                }
-#            }
-#            <param 2 name > {<param> <value>}
-#            ...
-#        }
-#        ...
-#    }
-global_processing {
-  dirac {
-    bl@lakala {
-      param {
-        int 6
-      }
-      value {
-        string *com.lakala.android
-      }
-    }
-    bl@jawboneup {
-      param {
-        int 6
-      }
-      value {
-        string *com.jawbone.up
-      }
-    }
-    bl@hojyremote {
-      param {
-        int 6
-      }
-      value {
-        string *com.hojy.hremote
-      }
-    }
-  }
- }
 # Default pre-processing effects. Add to audio_effect.conf "effects" section if
 # audio HAL implements support for them.
 #
