XiaomiParts: add kcal support
taken from:
https://github.com/omnirom/android_device_leeco_zl1/commit/cdb1b9e2ae7f7612e0ca391c33e68ddedb181dce
credits: @darkobas

Also includes commits from:
https://github.com/Quantummech2000/DT-zenfone3

Signed-off-by: Nick <nickgunale@gmail.com>

# Conflicts:
#	XiaomiParts/res/values-ru/strings.xml
#	XiaomiParts/res/values-uk/strings.xml
#	XiaomiParts/res/values/strings.xml
#	XiaomiParts/res/xml/main.xml
#	XiaomiParts/src/com/mdroid/settings/device/Startup.java
#	rootdir/init.qcom.rc

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -210,6 +210,23 @@ on boot
     # Audio amplifier kernel module
     chown audioserver system /sys/audio_amplifier/enable
 
+    chown system system /sys/devices/platform/kcal_ctrl.0/kcal
+    chown system system /sys/devices/platform/kcal_ctrl.0/kcal_enable
+    chown system system /sys/devices/platform/kcal_ctrl.0/kcal_cont
+    chown system system /sys/devices/platform/kcal_ctrl.0/kcal_sat
+    chown system system /sys/devices/platform/kcal_ctrl.0/kcal_hue
+    chown system system /sys/devices/platform/kcal_ctrl.0/kcal_min
+    chown system system /sys/devices/platform/kcal_ctrl.0/kcal_val
+    chown system system /sys/devices/platform/kcal_ctrl.0/kcal_invert_obsolete
+    chmod 0660 /sys/devices/platform/kcal_ctrl.0/kcal
+    chmod 0660 /sys/devices/platform/kcal_ctrl.0/kcal_enable
+    chmod 0660 /sys/devices/platform/kcal_ctrl.0/kcal_cont
+    chmod 0660 /sys/devices/platform/kcal_ctrl.0/kcal_sat
+    chmod 0660 /sys/devices/platform/kcal_ctrl.0/kcal_hue
+    chmod 0660 /sys/devices/platform/kcal_ctrl.0/kcal_min
+    chmod 0660 /sys/devices/platform/kcal_ctrl.0/kcal_val
+    chmod 0660 /sys/devices/platform/kcal_ctrl.0/kcal_invert_obsolete
+
 # msm specific files that need to be created on /data
 on post-fs-data
     mkdir /data/vendor/misc 01771 system system
