--- a/XiaomiParts/AndroidManifest.xml
+++ b/XiaomiParts/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.elixir.settings.device"
+    package="com.mdroid.settings.device"
     android:sharedUserId="android.uid.system" >
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -16,7 +16,7 @@
         android:theme="@android:style/Theme.DeviceDefault.Settings"
         android:supportsRtl="true" >
         <activity
-            android:name="com.elixir.settings.device.DeviceSettings"
+            android:name="com.mdroid.settings.device.DeviceSettings"
             android:exported="true"
             android:label="@string/advanced_settings" >
             <intent-filter>
@@ -25,7 +25,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <receiver android:name="com.elixir.settings.device.Startup" >
+        <receiver android:name="com.mdroid.settings.device.Startup" >
             <intent-filter android:priority="100" >
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
