--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -506,12 +506,12 @@ service loc_launcher /vendor/bin/loc_launcher
     class late_start
     group gps inet diag wifi
 
-service qcom-sh /vendor/bin/init.qcom.sh
+service qcom-sh /vendor/bin/sh /vendor/bin/init.qcom.sh
     class late_start
     user root
     oneshot
 
-service qcom-post-boot /vendor/bin/init.qcom.post_boot.sh
+service qcom-post-boot /vendor/bin/sh /vendor/bin/init.qcom.post_boot.sh
     class late_start
     user root
     disabled
