--- a/rootdir/init.qcom.usb.rc
+++ b/rootdir/init.qcom.usb.rc
@@ -68,7 +68,7 @@ on boot
     write /sys/module/g_android/parameters/mtp_tx_req_len 131072
     write /sys/module/g_android/parameters/mtp_rx_req_len 131072
 
-service qcom-usb-sh /system/bin/sh /vendor/bin/init.qcom.usb.sh
+service qcom-usb-sh /vendor/bin/sh /vendor/bin/init.qcom.usb.sh
     class core
     user root
     oneshot
