markw: sensor: update sensor_def_qcomdev.conf
-we have only one sensors for each device
-AMD INT Cfg param1 is D0E
-removed vdd and vddio params
-enabled reset pin

--- a/configs/sensors/sensor_def_qcomdev.conf
+++ b/configs/sensors/sensor_def_qcomdev.conf
@@ -134,18 +134,6 @@
 1900 0 0x00010001  #Maj Ver
 1901 1 0x00010001  #Min Ver
 
-2000 1 0x00010001  #set to 1 to enable
-2001 3 0x00010001  #number of accel sensors
-
-2100 1 0x00010001  #set to 1 to enable
-2101 3 0x00010001  #number of gyro sensors
-
-2200 1 0x00010001  #set to 1 to enable
-2201 2 0x00010001  #number of mag sensors
-
-2300 1 0x00010001  #set to 1 to enable
-2301 2 0x00010001  #number of plsensors
-
 #
 # SAM config
 203  65536   0x10001 #AMD
@@ -164,10 +152,15 @@
 4112 65536   0x10001 #SMD
 4103 5       0x10001 #SMD_ACC_WIN_TIME
 
-#
-# SSI SMGR Cfg 0 BMI160 ACCEL
-2003 0x0f4d0fd654c7eab5 0x00010001    #UUID
+####################################################
+###                    ACCEL                     ###
+####################################################
+2000 1 0x00010001  #set to 1 to enable
+2001 1 0x00010001  #number of accel sensors
+
+# BMI160 ACCEL
 2002 0xd646cb83ec0cd5a5 0x00010001    #UUID
+2003 0x0f4d0fd654c7eab5 0x00010001    #UUID
 2004 30000              0x00010001    #off_to_idle
 2005 0                  0x00010001    #idle_to_ready
 2006 42                 0x00010001    #gpio1
@@ -177,13 +170,16 @@
 2010 0x68               0x00010001    #i2c_address
 2011 1                  0x00010001    #sens_default
 2012 0xD0               0x00010001    #flags
-2068 0xff               0x00010001    #vdd
-2069 0xff               0x00010001    #vddio
 
-#
-# SSI SMGR Cfg 1 BMI160 GYRO
-2103 0x0f4d0fd654c7eab5 0x00010001    #UUID
+####################################################
+###                     GYRO                     ###
+####################################################
+2100 1 0x00010001  #set to 1 to enable
+2101 1 0x00010001  #number of gyro sensors
+
+# BMI160 GYRO
 2102 0xd646cb83ec0cd5a5 0x00010001    #UUID
+2103 0x0f4d0fd654c7eab5 0x00010001    #UUID
 2104 30000              0x00010001    #off_to_idle
 2105 0                  0x00010001    #idle_to_ready 
 2106 42                 0x00010001    #gpio1
@@ -193,29 +189,35 @@
 2110 0x68               0x00010001    #i2c_address
 2111 4                  0x00010001    #sens_default
 2112 0xD0               0x00010001    #flags
-2168 0xff               0x00010001    #vdd
-2169 0xff               0x00010001    #vddio
 
-#
-# SSI SMGR Cfg 1 YAS530 MAG
-2214 0x1dc79ad346a827b3 0x00010001    #UUID
-2213 0xbd403129b15b7905 0x00010001    #UUID
-2215 5                  0x00010001    #off_to_idle
-2216 10                 0x00010001    #idle_to_ready
-2217 0xFFFF             0x00010001    #gpio1
-2218 1020               0x00010001    #reg_group_id
-2219 0xFFFF             0x00010001    #cal_grp_id
-2220 4                  0x00010001    #i2c_bus
-2221 0x2E               0x00010001    #i2c_address
-2222 1                  0x00010001    #sens_default
-2223 0                  0x00010001    #flags
-2270 0xff               0x00010001    #vdd
-2271 0xff               0x00010001    #vddio
+####################################################
+###                     MAG                      ###
+####################################################
+2200 1 0x00010001  #set to 1 to enable
+2201 1 0x00010001  #number of mag sensors
 
-#
-# SSI SMGR Cfg 4 ltr559 ALSPS
-2303 0x2f1531647b9aa8b3 0x00010001    #UUID should same to ADSP
+# YAS530 MAG
+2202 0xbd403129b15b7905 0x00010001    #UUID
+2203 0x1dc79ad346a827b3 0x00010001    #UUID
+2204 5                  0x00010001    #off_to_idle
+2205 10                 0x00010001    #idle_to_ready
+2206 0xFFFF             0x00010001    #gpio1
+2207 1020               0x00010001    #reg_group_id
+2208 0xFFFF             0x00010001    #cal_grp_id
+2209 4                  0x00010001    #i2c_bus
+2210 0x2E               0x00010001    #i2c_address
+2211 1                  0x00010001    #sens_default
+2212 0                  0x00010001    #flags
+
+####################################################
+###                     ALSPS                    ###
+####################################################
+2300 1 0x00010001  #set to 1 to enable
+2301 1 0x00010001  #number of plsensors
+
+# ltr559 ALSPS
 2302 0x194a7a549019f36d 0x00010001    #UUID
+2303 0x2f1531647b9aa8b3 0x00010001    #UUID should same to ADSP
 2304 5700               0x00010001    #off_to_idle
 2305 10000              0x00010001    #idle_to_ready
 2306 0xFFFF             0x00010001    #gpio1
@@ -225,8 +227,6 @@
 2310 0x23               0x00010001    #i2c_address
 2311 0                  0x00010001    #sens_default
 2312 0x00               0x00010001    #flags
-2368 0xff               0x00010001    #vdd
-2369 0xff               0x00010001    #vddio
 
 #
 # SSI SMGR Version
@@ -246,7 +246,7 @@
 2703 15         0x00010001   #I2C SCL_1
 2704 0xFFFF     0x00010001   #I2C SDA_2
 2705 0xFFFF     0x00010001   #I2C SCL_2
-2706 0xFFFF     0x00010001   #RESET pin
+2706 44         0x00010001   #RESET pin
 2709 42         0x00010001   #ACCEL DRI
 2710 45         0x00010001   #GYRO DRI
 2711 44         0x00010001   #MAG DRI
@@ -256,7 +256,7 @@
 #
 # AMD Cfg
 200  0x000A0000 0x00010001   #AMD Default Sample rate
-201  0x00000CDC 0x00010001   #AMD INT Cfg param1
+201  0x00000D0E 0x00010001   #AMD INT Cfg param1
 202  0x00008000 0x00010001   #AMD INT Cfg param2
 
 #
