--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -58,6 +58,10 @@ on post-fs-data
     mkdir /data/misc/seemp 0700 system system
     mkdir /data/misc/audio_pp 0771 media audio
 
+# ZRAM setup
+    write /sys/block/zram0/comp_algorithm lz4
+    write /sys/block/zram0/max_comp_streams 8
+
 # Vibrator
     chown system system /sys/class/timed_output/vibrator/vtg_level
     chown system system /sys/class/timed_output/vibrator/vtg_max
@@ -66,8 +70,8 @@ on post-fs-data
     chmod 0644 /sys/class/timed_output/vibrator/vtg_max
     chmod 0644 /sys/class/timed_output/vibrator/vtg_min
 
-   # Add a cpuset for the camera daemon
-   # We want all cores for camera
+# Add a cpuset for the camera daemon
+# We want all cores for camera
     mkdir /dev/cpuset/camera-daemon
     write /dev/cpuset/camera-daemon/cpus 0-7
     write /dev/cpuset/camera-daemon/mems 0
@@ -76,8 +80,8 @@ on post-fs-data
     chmod 0664 /dev/cpuset/camera-daemon/tasks
 
 #Create folder for mm-qcamera-daemon
-mkdir /data/vendor/camera 0770 camera camera
-mkdir /data/misc/camera 0770 camera camera
+    mkdir /data/vendor/camera 0770 camera camera
+    mkdir /data/misc/camera 0770 camera camera
 
 #start camera server as daemon
 service qcamerasvr /vendor/bin/mm-qcamera-daemon
@@ -212,9 +216,9 @@ on charger
     start hvdcp_opti
 
 on boot
-	write /dev/cpuset/top-app/cpus 0-7
-	write /dev/cpuset/background/cpus 0-1
-	write /dev/cpuset/system-background/cpus 0-3
+    write /dev/cpuset/top-app/cpus 0-7
+    write /dev/cpuset/background/cpus 0-1
+    write /dev/cpuset/system-background/cpus 0-3
 
 service ppd /vendor/bin/mm-pp-dpps
     class late_start
