--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -552,6 +552,12 @@ service time_daemon /vendor/bin/time_daemon
     user root
     group root
 
+service power_off_alarm /vendor/bin/power_off_alarm
+    class core
+    group system
+    disabled
+    oneshot
+
 service gx_fpd /vendor/bin/gx_fpd
     class core
     user system
