--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -48,6 +48,7 @@ on property:sys.boot_completed=1
     chown system system /sys/kernel/sound_control/headphone_gain
     chown system system /sys/kernel/sound_control/speaker_gain
     chown system system /sys/kernel/sound_control/mic_gain
+    chown system system /sys/kernel/sound_control/mic2_gain
     restorecon_recursive /sys/kernel/sound_control
 
 on post-fs-data
